--- a/alembic.ini
+++ b/alembic.ini
@@ -50,7 +50,7 @@ version_path_separator = os  # default: use os.pathsep
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = mysql+pymysql://root:12345@localhost/dbBlog
+sqlalchemy.url = postgresql://postgres:12345@localhost/dbblog
 
 
 [post_write_hooks]
